[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "fugashi>=1.4.0",
    "ipadic>=1.0.0",
    "mecab-python3>=1.0.10",
    "protobuf>=6.30.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "unidic-lite>=1.0.8",
    "uvicorn>=0.34.2",
    "xformers>=0.0.30",
]
